# opencv_daily

./: .gitignore
day_1/cpp/color_spaces/: CMakeLists.txt
day_1/cpp/color_spaces/include/: color_space_converter.h
day_1/cpp/color_spaces/src/: color_space_converter.cpp  main.cpp
day_2/cpp/image_blender/: CMakeLists.txt
day_2/cpp/image_blender/src/: image_blender.cpp
day_3/cpp/segmentation_by_thresholding/: CMakeLists.txt
day_3/cpp/segmentation_by_thresholding/src/: thresholding.cpp
day_4/cpp/brightness_and_contrast/: CMakeLists.txt
day_4/cpp/brightness_and_contrast/src/: brightness_and_contrast.cpp
day_5/cpp/edge_detection/: CMakeLists.txt
day_5/cpp/edge_detection/src/: edge_detection.cpp
day_6/cpp/erosion_dilation/: CMakeLists.txt
day_6/cpp/erosion_dilation/src/: erosion_dilation.cpp
day_7/cpp/music_notes/: CMakeLists.txt
day_7/cpp/music_notes/src/: music_notes.cpp
